Added company detail page, and removed everything but the company name from the list page.

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,11 +1,5 @@
 <h1>Dis is da veteran-led companies yo</h1>
 
 <% @companies.each do |company| %>
-  <p>Name: <%= company.name %><br>
-  Website: <%= link_to company.name, company.url %><br>
-  Employees: <%= company.employees_count %><br>
-  Total Funding: <%= company.total_funding == 0 ? "Bootstrap yo" : "#{company.total_funding}k" %><br>
-  Stage: <%= company.stage %><br>
-  Year Founded: <%= company.year_founded.strftime("%Y") %><br>
-  Qualification: <%= company.qualification %><br></p>
+  <p>Name: <%= link_to company.name, company_path(company) %><br>
 <% end %>
