Trying to get the photo to load with different css syntax.

--- a/app/assets/stylesheets/views/_home.scss
+++ b/app/assets/stylesheets/views/_home.scss
@@ -11,7 +11,7 @@
   #home-cover-area {
 
     #welcome-background {
-      background-image: url("/assets/_test_home_pel_photo.jpg");
+      background: image-url("_test_home_pel_photo.jpg");
       // override for mobile class and/or mobile app class
       height: 100%;
       width: 100%;
