--- a/app/views/admin/companies/_details.html.erb
+++ b/app/views/admin/companies/_details.html.erb
@@ -2,6 +2,12 @@
   <dt>Name</dt>
   <dd><%= resource.name %></dd>
 
+  <dt>Founders</dt>
+  <dd><%= resource.founders.map(&:name).to_sentence %></dd>
+
+  <dt>Organizations</dt>
+  <dd><%= resource.organizations.map(&:name).to_sentence %></dd>
+
   <dt>Website</dt>
   <dd><%= resource.url %></dd>
 
