Get instead of post for companies/new page.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="logo"><a href="/">VetCo</a></div>
     <nav>
-      <%= button_to 'Add Company', new_company_path, class: 'btn' %>
+      <%= link_to 'Add Company', new_company_path, class: 'btn' %>
     </nav>
   </div>
 </div>
