--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,21 +1,24 @@
-<%= simple_form_for(@company) do |f| %>
-  <%= f.error_notification %>
+<div class="container new-company-form">
+  <%= simple_form_for(@company) do |f| %>
+    <%= f.error_notification %>
 
-  <%= f.input :name %>
-  <%= f.input :url, label: 'Website' %>
-  <%= f.input :employees_count, label: '# of Employees' %>
-  <%= f.input :total_funding, hint: 'Number in thousands of dollars' %>
-  <%= f.input :stage %>
-  <%= f.input :year_founded, as: :date, html5: true %>
-  <%= f.input :qualification %>
+    <%= f.input :name %>
+    <%= f.input :url, label: 'Website' %>
+    <%= f.input :employees_count, label: '# of Employees' %>
+    <%= f.input :total_funding, hint: 'Number in thousands of dollars' %>
+    <%= f.input :stage %>
+    <%= f.input :year_founded, as: :date, html5: true %>
+    <%= f.input :qualification %>
 
-  <%= f.button :submit %>
+    <%= f.button :submit %>
 
-<h4>OR</h4>
+  <% end %>
+  
+  <h4>OR</h4>
 
-<p>Email this to someone else</p>
+  <p>Email this link to someone else</p>
 
-<input id="email-link"></input>
-<button>Send</button>
+  <input id="email-link"></input>
+  <button>Send</button>
 
-<% end %>
+</div>
