Header for companies list.

--- a/app/assets/stylesheets/foundation/_layout.scss
+++ b/app/assets/stylesheets/foundation/_layout.scss
@@ -42,6 +42,10 @@ body {
   margin:0 auto;
   clear: both;
 
+  h1 {
+    margin: 10px 0;
+  }
+
   @include respond-below($media-768) {
     width: 100%;
     min-width: 100%;
