Changed Founders to Leaders.

--- a/app/views/admin/companies/_details.html.erb
+++ b/app/views/admin/companies/_details.html.erb
@@ -2,8 +2,8 @@
   <dt>Name</dt>
   <dd><%= resource.name %></dd>
 
-  <dt>Founders</dt>
-  <dd><%= resource.founders.map(&:name).to_sentence %></dd>
+  <dt>Leaders</dt>
+  <dd><%= resource.leaders.map(&:name).to_sentence %></dd>
 
   <dt>Organizations</dt>
   <dd><%= resource.organizations.map(&:name).to_sentence %></dd>
