--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -3,7 +3,7 @@
     <div id="home-cover-area">
       <div id="welcome-background"></div>
       <div id="welcome-content">
-        <h1 class="welcome-tagline">Welcome to VetCo</h1>
+        <h1 class="welcome-tagline">Welcome to Veterans List</h1>
         <h2 class="welcome-subtagline">The authoritative source for veteran-led startups</h2>
         <%= link_to "View Companies", companies_path, class: 'btn view-companies-button' %>
       </div>
