--- a/app/views/admin/companies/_form.html.erb
+++ b/app/views/admin/companies/_form.html.erb
@@ -6,7 +6,7 @@
     <%= simple_form_for [:admin, resource], html: {class: 'form-horizontal'} do |f| %>
       <div class='form-inputs'>
         <%= f.input :name %>
-        <%= f.association :founders, multiple: true, input_html: {class: 'chosen-select'} %>
+        <%= f.association :leaders, multiple: true, input_html: {class: 'chosen-select'} %>
         <%= f.association :organizations, multiple: true, input_html: {class: 'chosen-select'} %>
         <%= f.input :url, label: 'Website' %>
         <%= f.input :employees_count, label: '# of Employees' %>
