--- a/app/views/admin/leaders/_list.html.erb
+++ b/app/views/admin/leaders/_list.html.erb
@@ -3,7 +3,7 @@
     <tr>
       <th class='controls'></th>
       <th class='hidden-xs hidden-sm hidden-md' width='10px'>ID</th>
-      <th>Founder</th>
+      <th>Leader</th>
     </tr>
   </thead>
   <tbody>
@@ -11,7 +11,7 @@
       <tr>
         <td class='controls'><%= link_to '', edit_resource_path(resource), class: 'btn btn-default icon-edit' %></td>
         <td class="" ass='hidden-xs hidden-sm hidden-md'><%= resource.id %></td>
-        <td><%= link_to resource.name, admin_founder_path(resource) %></td>
+        <td><%= link_to resource.name, admin_leader_path(resource) %></td>
       </tr>
     <%- end %>
   </tbody>
