--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div id="header">
   <div class="container">
-    <div class="logo"><a href="/">VetCo</a></div>
+    <div class="logo"><a href="/">Veterans List</a></div>
     <nav>
       <%= link_to 'Add Company', new_company_path, class: 'btn' %>
     </nav>
