--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= 'VetCo - Find all Veteran Companies in one place' %></title>
+    <title><%= 'Veterans List - Find all Veteran Companies in one place' %></title>
     <meta name="viewport" content="width=device-width, user-scalable=yes">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
