--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -8,7 +8,9 @@
     <%= f.input :total_funding, hint: 'Number in thousands of dollars' %>
     <%= f.input :stage %>
     <%= f.input :year_founded, as: :date, html5: true %>
-    <%= f.input :qualification %>
+    <%= f.input :total_founders %>
+    <%= f.input :veteran_founders %>
+    <%= f.input :veteran_executives %>
 
     <%= f.button :submit %>
 
