--- a/app/views/admin/companies/_form.html.erb
+++ b/app/views/admin/companies/_form.html.erb
@@ -13,7 +13,9 @@
         <%= f.input :total_funding, hint: 'Number in thousands of dollars' %>
         <%= f.input :stage %>
         <%= f.input :year_founded, as: :date, html5: true %>
-        <%= f.input :qualification %>
+        <%= f.input :total_founders %>
+        <%= f.input :veteran_founders %>
+        <%= f.input :veteran_executives %>
       </div>
       <div class='form-actions'>
         <%= f.button :submit, 'Save' %>
