--- a/app/assets/stylesheets/foundation/_buttons.scss
+++ b/app/assets/stylesheets/foundation/_buttons.scss
@@ -1,3 +1,10 @@
+a { color: #1F88A9; text-decoration: none;}
+a:hover { color: #0e7292; }
+a:focus { outline: thin dotted; }
+a:hover, a:active { outline: 0; }
+
+
+
 /********************************
   BUTTONS BUTTONS BUTTONS
 ********************************/
