--- a/app/assets/stylesheets/foundation/_config.scss
+++ b/app/assets/stylesheets/foundation/_config.scss
@@ -2,6 +2,10 @@
 // site theme
 ///////////////////////////////
 
+$defaultColor: #797979;
+$btnHoverColor: #546D1A;
+$basefont:13;
+
 $gray-light: #eeeeee;
 
 $border-radius: 4px;
