--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -2,6 +2,12 @@
   <div id="welcome-area">
     <div id="home-cover-area">
       <div id="welcome-background"></div>
+      <nav class="main-nav">
+        <a href="/mission" class="main-nav-btn">Mission</a>
+        <a href="/companies" class="main-nav-btn">List</a>
+        <a href="/research" class="main-nav-btn">Research</a>
+      </nav>
+
       <div id="welcome-content">
         <h1 class="welcome-tagline">Welcome to Veterans List</h1>
         <h2 class="welcome-subtagline">The authoritative source for veteran-led startups</h2>
