--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,48 +1,79 @@
-<div class='container'>
-  <div class='new-company-form'>
-    <h1>Add Company Data</h1>
+<div class="container margin_bottom">
 
-    <%= simple_form_for(@company) do |f| %>
-      <%= f.error_notification %>
+  <div class="row" >
+    <div class="col-sm-2"> 
+     
+    </div>
+    <div class="col-sm-8 " >
+       
+      <div class="formbackground row">
+        <ul class="nav nav-tabs navdesign" id="myTab">
+          <li class="active"><a href="#sectionA">ADD A COMPANY</a></li>
+          <li><a href="#sectionB">EMAIL THIS TO SOMEONE</a></li>
+        </ul>
+        <div class="tab-content padding_tab">
+          <div id="sectionA" class="tab-pane fade in active">
+            <%= simple_form_for(@company) do |f| %>
+              <%= f.error_notification %>
+              <%= f.input :name %>
+              <%= f.input :url, label: 'Website' %>
+              <%= f.input :employees_count, label: '# of Employees' %>
+              <%= f.input :total_funding, hint: 'Number in thousands of dollars' %>
+              <%= f.input :stage %>
+              <%= f.input :year_founded, start_year: Date.today.year - 15,
+                                         end_year: Date.today.year,
+                                         discard_hour: true, 
+                                         discard_day: true, 
+                                         discard_month: true %>
+              <%= f.input :total_founders %>
+              <%= f.input :veteran_founders %>
+              <%= f.input :veteran_executives %>
 
-      <%= f.input :name %>
-      <%= f.input :url, label: 'Website' %>
-      <%= f.input :employees_count, label: '# of Employees' %>
-      <%= f.input :total_funding, hint: 'Number in thousands of dollars' %>
-      <%= f.input :stage %>
-      <%= f.input :year_founded, start_year: Date.today.year - 15,
-                                 end_year: Date.today.year,
-                                 discard_hour: true, 
-                                 discard_day: true, 
-                                 discard_month: true %>
-      <%= f.input :total_founders %>
-      <%= f.input :veteran_founders %>
-      <%= f.input :veteran_executives %>
+              <div class="form-group string optional your_email">
+                <%= f.button :submit, class: "button-blue" %>
+              </div>
+            <% end %> 
+          </div>
 
-      <%= f.button :submit %>
 
-    <% end %>
-  </div>
+          <!-- Email form -->
+          <div id="sectionB" class="tab-pane fade">
+
+
+
+            <form class='email-form-inputs'>
+              <div class="form-group string optional person_name">
+                <div class="form-label col-lg-3 col-md-3"><label class="string optional" for="person_name">Ask this person</label></div>
+                <div class="form-input col-lg-9 col-md-9"><input class="string optional form-control" type="text" name="name" id="person_name" placeholder="Name"></div>
+              </div>
+              <div class="form-group string optional person_email">
+                <div class="form-label col-lg-3 col-md-3"><label class="string optional" for="person_email">Email</label></div>
+                <div class="form-input col-lg-9 col-md-9"><input class="string optional form-control" type="text" name="email" id="person_email" placeholder="veteran.leader@veterancompany.com"></div>
+              </div>
+              <div class="form-group string optional company_name">
+                <div class="form-label col-lg-3 col-md-3"><label class="string optional" for="company_name">Which Company?</label></div>
+                <div class="form-input col-lg-9 col-md-9"><input class="string optional form-control" type="text" name="email" id="company_name" placeholder="Company name"></div>
+              </div>
+              <div class="form-group string optional your_name">
+                <div class="form-label col-lg-3 col-md-3"><label class="string optional" for="your_name">Your Name</label></div>
+                <div class="form-input col-lg-9 col-md-9"><input class="string optional form-control" type="text" name="name" id="your_name" placeholder="Name"></div>
+              </div>
+              <div class="form-group string optional your_email">
+                <div class="form-label col-lg-3 col-md-3"><label class="string optional" for="your_email">Your Email</label></div>
+                <div class="form-input col-lg-9 col-md-9"><input class="string optional form-control" type="text" name="email" id="your_email" placeholder="veteran.supporter@example.com"></div>
+              </div>
+              <div class="form-group string optional your_email">
+                <input type="submit" value="Submit" class="button-blue">
+              </div>
+            </form>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
   
-  <h4>OR</h4>
-
-  <div class='email-form'>
-    <h1>Email this link to someone</h1>
-
-    <form class='email-form-inputs'>
-      <label>Ask this person</label>
-      <input type="text" name="name" placeholder="Name">
-      <label>Email</label>
-      <input type="text" name="name" placeholder="veteran.leader@veterancompany.com">
-      <label>To provide information on this veteran-led company</label>
-      <input type="text" name="company-name" placeholder="Company Name">
-      <label>Your Name</label>
-      <input type="text" name="your-name" placeholder="Name">
-      <label>Your Email</label>
-      <input type="text" name="your-email" placeholder="veteran.supporter@example.com">
-      
-      <input type="submit" value="Submit">
-    </form>
+  <div class="col-sm-2"> </div>
+  </div>
   </div>
 
-</div>
