--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -9,7 +9,7 @@
       <div class="formbackground row">
         <ul class="nav nav-tabs navdesign" id="myTab">
           <li class="active"><a href="#sectionA">ADD A COMPANY</a></li>
-          <li><a href="#sectionB">EMAIL THIS TO SOMEONE</a></li>
+          <li><a href="#sectionB">EMAIL TO SOMEONE</a></li>
         </ul>
         <div class="tab-content padding_tab">
           <div id="sectionA" class="tab-pane fade in active">
