--- a/app/assets/stylesheets/foundation/_header-nav.scss
+++ b/app/assets/stylesheets/foundation/_header-nav.scss
@@ -20,9 +20,10 @@
 .top-div {
   font-size: 9px;
 }
-.top_div_padding {
-  color: #03A9F4 ;
-  padding: 7px 0 0;   
+
+.add-company-button,
+.pbc-text {
+  padding-top: 7px;
 }
 
 // 
