--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,12 +6,12 @@
       <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/"><span aria-hidden="true" class="vl-logo"></span></a> 
     </div>
       
-    <div class="col-md-4 col-xs-4 top_div_padding text-center" style="margin-top:1px;">
-      <%= link_to 'Add Company', new_company_path, class: 'btn top-btn-color' %>
+    <div class="col-md-4 col-xs-4 add-company-button text-center" style="margin-top:1px;">
+      <%= link_to 'Submit Company', new_company_path, class: 'btn top-btn-color' %>
     </div>
       
     <div class="col-md-4 hidden-xs text-right">
-      <div class="top-div"><a href="http://www.patriotbootcamp.org" title="">A project from</a></div>
+      <div class="top-div pbc-text"><a href="http://www.patriotbootcamp.org" title="">A project from</a></div>
       <a href="http://www.patriotbootcamp.org" title="" class="header-nav-text">PATRIOT BOOT CAMP</a>
     </div>
       
