--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
 @import 'foundation/containers';
 @import 'foundation/layout';
 @import 'foundation/forms';
-@import 'foundation/buttons';
+// @import 'foundation/buttons';
 @import 'foundation/buttons-janky';
 @import 'foundation/header-nav';
 @import 'foundation/tables';
@@ -28,6 +28,7 @@
 //Views
 @import 'views/home';
 @import 'views/new-company';
-//@import 'views/companies';
+// @import 'views/companies';
+@import 'views/company';
 
 
