--- a/app/assets/stylesheets/base/style.scss
+++ b/app/assets/stylesheets/base/style.scss
@@ -11,33 +11,38 @@ color:#949494;
 margin-top: -25px;
 }
 .font-form {
+  font-family: Goudy OldT !important;
+  color: #212121 !important;
+  font-size:18pt !important;
+}
 
-font-family: Goudy OldT !important;
-color: #212121 !important;
-font-size:18pt !important;
-}
 .navbar-toggle {
-    background-color: black;
-    background-image: url("../images/icon_menu.png");
-    background-size: 100% 100%;
-    height: 34px;
-    width: 38px;
+  background-color: black;
+  background: image-url("icon_menu.png");
+  background-size: 100% 100%;
+  height: 34px;
+  width: 38px;
 }
+
 .navdesign{
 /*margin-top:-40px;
 margin-bottom:30px;*/
 }
-a:focus{
+
+a:focus {
 	outline: medium none;
 }
-.navbackground{
+
+.navbackground {
   background-color: #8a8a8a;
   color: #000;
 }
+
 #myTab > li {
     width: 50%;
 }
-#myTab > li > a{
+
+#myTab > li > a {
 	  border-radius: 0;
     font-size: 23px;
     margin-right: 0;
@@ -46,28 +51,33 @@ a:focus{
     outline: 0;
     border: 0;
 }
+
 .my_div_form {
     display: inline-block;
     margin-bottom: 15px;
     width: 100%;
 }
+
 .my_div_form2 {
     display: inline-block;
     margin-bottom: 15px;
     width: 100%;
 }
-.my_div_form label{
+
+.my_div_form label {
 	font-weight: bold;
 }
+
 .my_div_form2 label ,.my_div_form2 h3{
 	font-weight: bold;
 }
-.font-weight
-{
-font-weight:none !important;
+
+.font-weight {
+font-weight: none !important;
 }
+
 .marginleft {
-  padding-left:55px;
+  padding-left: 55px;
 }
 
 .left-margin {
