--- a/app/assets/stylesheets/foundation/_fonts.scss
+++ b/app/assets/stylesheets/foundation/_fonts.scss
@@ -1,9 +1,7 @@
-
 @font-face {
     font-family: "Goudy Old";
     src: url("../fonts/Goudy Old Style Regular.ttf");
 }
-
 
 @font-face {
     font-family: "Goudy OldT";
@@ -20,24 +18,32 @@
     src: url("../fonts/Helvetica Light.ttf");
 }
 
-
 @font-face {
     font-family: "Helvetica Light";
     src: url("../fonts/Helvetica Light.ttf");
 }
+
 @font-face {
     font-family: "Goudy Old Style T Bold";
     src: url("../fonts/GoudyOldStyT_Bold.ttf");
 }
+
 @font-face {
     font-family: "Avenir Next Regular";
     src: url("../fonts/AvenirNextLTPro-Regular.ttf");
 }
+
 @font-face {
     font-family: "Gill Sans Bold";
     src: url("../fonts/Gill Sans MT Bold.ttf");
 }
+
 @font-face {
 font-family: "Helvetica bold";
     src: url("../fonts/Helvetica-Bold.otf");
+}
+
+@font-face {
+  font-family: 'Gouldy';
+  src: url('Gouldy.ttf') format('truetype');
 }
