--- a/app/assets/stylesheets/foundation/_forms.scss
+++ b/app/assets/stylesheets/foundation/_forms.scss
@@ -1,3 +1,13 @@
 .nav-tabs {
   border: 0;
 }
+
+.form-input,
+.form-label {
+  margin-top: 10px;
+}
+
+.submit-button {
+  display: block;
+  margin: 20px auto;
+}
