Split out the main nav into a partial for each of the pages.

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,8 +1,4 @@
-<nav class="main-nav">
-  <a href="/mission" class="main-nav-btn">Mission</a>
-  <a href="/companies" class="main-nav-btn main-nav-btn-active">List</a>
-  <a href="/research" class="main-nav-btn">Research</a>
-</nav>
+<%= render partial: 'layouts/main_nav' %>
 
 <div class='container'>
   <table class="table-striped">
