--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,11 +1,4 @@
-<nav class="main-nav">
-  <a href="/mission" class="main-nav-btn">Mission</a>
-  <a href="/companies" class="main-nav-btn main-nav-btn-active">List</a>
-  <a href="/research" class="main-nav-btn">Research</a>
-  <%- if @company.present? %>
-    <div><a href="/companies" class="returntolist"><i class="fa fa-arrow-left"></i> <u>Return to List</u></a></div>
-  <%- end %>
-</nav>
+<%= render partial: 'layouts/main_nav' %>
 <div class='container'>
   <h1 class='company-header sublistheading'><%= @company.name %></h2>
 
